tests/profile/error/keybinding/missing_script - Copy.profile
{
  "version": { "major": 12, "minor": 13 },
  "keybindings": [
    {
      "key": "T",
      "documentation": "T documentation",
      "name": "T name",
      "gui_path": "T Gui-Path",
      "is_local": true,
      "script": "T script"
    }
  ]
}
